--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> Spotify</header>
+    <header> 
+    <div class="container">
+        <img src="logo.png" alt="Logo Spotify">
+        <img src="" alt="hamburguesa">
+
+    </div>
+
+    </header>
+
+
+
     <h1> Prueba Premiun<br/>gratis 3 meses</h1>
     <h3>escucha millones de canciones sin anuncios,<br/>a la carta y sin conexión</h3>
     <p>VER PLANES</p>
