cambios de la segunda clase

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spotify</title>
+    <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header> 
     <div class="container">
-        <img src="logo.png" alt="Logo Spotify">
-        <img src="" alt="hamburguesa">
+        <img src="./images/logo.png" alt="Logo Spotify" class="logo">
+        <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer">
+        <ul>
 
+        </ul>
     </div>
 
-    </header>
+    
 
 
 
