--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
     <div class="container">
-        <img src="./images/logo.png" alt="Logo Spotify" class="logo">
-        <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer">
-        <ul>
-
-        </ul>
+        <img src="./images/logo.png" alt="Logo Spotify" class="logo"/>
+        <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer"/>
     </div>
-
-    
-
-
-
+    <div class="cuerpo">
     <h1> Prueba Premiun<br/>gratis 3 meses</h1>
     <h3>escucha millones de canciones sin anuncios,<br/>a la carta y sin conexión</h3>
     <p>VER PLANES</p>
     <h6>Rigen términos y condiciones. Los tres meses gratis no estan dispoibles para usuarios que ya hayan probado Premiúm. </h6>
-<h1>¿Por qué pasarte a Premium?</h1>
+</div>
+    <h2>¿Por qué pasarte a Premium?</h2>
 <h4>Descarga Música</h4>
 <h5>Llévala siempre contigo</h5>
 <h4>Sin Anúncios</h4>
