--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">"
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <img src="./images/logo.png" alt="Logo Spotify" class="logo" />
-            <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer" />
-        </div>
+    <header class="container">
+        <img src="./images/logo.png" alt="Logo Spotify" class="logo" />
+        <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer" />
     </header>
     <div class="cuerpo">
-        <br>
-        <br>
-        <br>
-        <br>
+
         <h1> Prueba Premiun<br />gratis 3 meses</h1>
         <h3>Escucha millones de canciones sin anuncios,<br />a la carta y sin conexión</h3>
         <button>VER PLANES</button>
