--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,52 +16,64 @@
         <img src="./images/logo.png" alt="Logo Spotify" class="logo" />
         <img src="./images/menu-icon.png" alt="hamburguer" class="hamburguer" />
 
+        <nav class="nav">
+
         <ul class="links">
-            <li><a href="">Premiun</a></li>
-            <li><a href="">Ayuda</a></li>
-            <li><a href="">Descargar</a></li>
-            <li><a href="">|</a></li>
-            <li><a href="">Registrarce</a></li>
-            <li><a href="">Iniciar sesion</a></li>
+            <li><a href="#">Premiun</a></li>
+            <li><a href="#">Ayuda</a></li>
+            <li><a href="#">Descargar</a></li>
+            <li><a href="#">Registrarce</a></li>
+            <li><a href="#">Iniciar sesion</a></li>
         </ul>
+        </nav>
     </header>
 
-    <div class="cuerpo">
+    <div class="background">
         <h1> Prueba Premiun<br />gratis 3 meses</h1>
-        <div>
+        <div class="text">
             <h3>Escucha millones de canciones sin anuncios,<br />a la carta y sin conexión</h3>
             <button>VER PLANES</button>
             <h6>Rigen términos y condiciones. Los tres meses gratis no estan dispoibles para usuarios que ya hayan
                 probado
                 Premiúm. </h6>
         </div>
-        <div class="container">
-            <h2>¿Por qué pasarte a <br> Premium?</h2>
+        </div>
 
-            <div class="image-container.1">
+        <div class="container"> 
+            <h2 class="text-container">¿Por qué pasarte a <br> Premium?</h2>
+
+            <div class="image-container-1">
                 <img src="./images/benefit-1.png" class="image-1" alt="logo">
-                
-                <p>Descarga Música</p>
-                <p>Llévala siempre contigo</p>
+
+                <div class="text-image-1">
+                   <p class="text-1">Descarga música.</p>
+                   <p>Llévala siempre contigo.</p>
+                </div>
+                          
             </div>
-            <div class="">
-                <img src="./images/benefit-2.png"
-                <p>Sin Anúncios</p>
-                <p>Disfruta de Música sin iterrupciones</p>
+
+            <div class="image-container-2">
+                <img src="./images/benefit-2.png" class="image-2" alt="logo del telefono">
+                <p>Sin Anúncios.</p>
+                <p>Disfruta de Música sin iterrupciones.</p>
             </div>
-            <div>
-                <img src="./images/benefit-3.png"
-                <h4>Escucha lo que quieras</h4>
-                <h5>Incluso en el Móvil</h5>
+
+            <div class="image-container-3">
+                <img src="./images/benefit-3.png" class="image-3" alt="logo de música">
+                <h4>Escucha lo que quieras.</h4>
+                <h5>Incluso en el Móvil.</h5>
             </div>
-            <div>
-                <img src="./images/benefit-4.png"
-                <h4>Salta todas la canciones que quieras</h4>
-                <h5>Simplemente dale al siguiente</h5>
+
+            <div class="image-container-4"> 
+                <img src="./images/benefit-4.png" class="image-4" alt="logo de canciones">
+                <h4>Salta todas la canciones que quieras.</h4>
+                <h5>Simplemente dale al siguiente.</h5>
             </div>
         </div>
 </body>
 <footer>
+    <footer class="footer-container"></footer>
+
 </footer>
 
 </html>
